--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-notify",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Node port of Eloy Durán's terminal-notifier [https://github.com/alloy/terminal-notifier]",
   "main": "./lib/main.js",
   "scripts": {
@@ -14,11 +14,9 @@
     "notify",
     "terminal",
     "notifier",
-    "terminal",
-    "notifier",
+    "terminal notifier",
     "notification",
-    "notification",
-    "center",
+    "notification center",
     "growl"
   ],
   "author": "Vivek Vasani",
